# tauri-plugin-ai

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
.claude/skills/tauri-plugin-ai/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
guest-js/: index.ts
permissions/: default.toml
permissions/schemas/: schema.json
src/: backend.rs  commands.rs  config.rs  error.rs  lib.rs  models.rs  provider.rs  streaming.rs
src/backends/: mod.rs  onnx.rs
src/providers/: anthropic.rs  ollama.rs  openai.rs
